# oikos_ledger

./: .env.example  .gitignore  README.md  pyproject.toml
app/: .gitignore  auth.config.ts  auth.ts  drizzle.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
app/app/: layout.tsx
app/lib/: fetcher.ts  openai.ts  utils.ts
app/lib/db/: client.ts  (+1 more)
app/types/: index.ts
assets/: generate_oikos_architecture.py  oikos_ledger_arch_diagram.md  oikos_ledget_arch_diagram_v2.md
docs/: api.md  architecture.md  challenges.md  data_model.md  deployment.md  plan.md  security.md  ui.md
docs/adr/: 001_aws_database_choice.md  002_lambda_vs_fastapi.md  003_drizzle_vs_raw_pg.md  004_two_schema_approach.md  005_deterministic_parser.md  006_idempotency.md  007_two_stage_normalization.md  008_aurora_over_supabase.md  009_setinterval_over_swr_polling.md  010_deterministic_first_normalization.md  011_row_number_for_ordering.md  012_agentic_nl_sql.md  013_openai_realtime_voice.md
ingestion/: Dockerfile  config.py  lambda_handler.py  requirements.txt
ingestion/db/: __init__.py  client.py
ingestion/models/: __init__.py  macro.py  recommendations.py  transactions.py  users.py
ingestion/pipeline/: __init__.py  balance_verifier.py  bedrock_embedder.py  bedrock_normalizer.py  categorizer.py  constants.py  embedder.py  geocoder.py  normalizer.py  parser.py  recommender.py  upi_parser.py
scripts/: create_tables.py  deploy_lambda.sh  drop_tables.py  seed_categories.py  seed_db.py  setup_lambda_role.sh  test_connection.py  test_pipeline.py
(+96 files in other folders)
