[project]
name = "oikos_ledger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.21",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "geoalchemy2>=0.15.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "google-generativeai>=0.8.0",
    "boto3>=1.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "scripts"]
